Fixed button styles on smaller devices

--- a/src/app/styles/button.module.css
+++ b/src/app/styles/button.module.css
@@ -86,3 +86,14 @@
         width: 60%;
     }
 }
+
+@media screen and (max-width:500px){
+    .image-span {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .text-span {
+        display: none;
+    }
+}
